# ChangeLog for dev-libs/boost
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/boost/ChangeLog,v 1.332 2014/09/04 09:13:24 pinkbyte Exp $

*boost-1.56.0 (04 Sep 2014)

  04 Sep 2014; Sergey Popov <pinkbyte@gentoo.org> +boost-1.56.0.ebuild:
  Version bump, wrt bug #519476

  19 Aug 2014; Raúl Porcel <armin76@gentoo.org> boost-1.52.0-r7.ebuild:
  alpha/ia64/sparc stable wrt #518488

  14 Aug 2014; Sergey Popov <pinkbyte@gentoo.org> boost-1.52.0-r7.ebuild:
  Stable for x86, wrt bug #518488

  14 Aug 2014; Sergey Popov <pinkbyte@gentoo.org> boost-1.55.0-r2.ebuild:
  Add proper blocker for app-emulation/emul-linux-x86-cpplibs, wrt bug #519744,
  inherit multilib eclass explicitly

  14 Aug 2014; Sergey Popov <pinkbyte@gentoo.org> boost-1.52.0-r7.ebuild,
  boost-1.53.0-r1.ebuild, boost-1.54.0-r1.ebuild, boost-1.55.0-r1.ebuild,
  boost-1.55.0-r2.ebuild:
  Drop obsolete Python 2.6 support

*boost-1.55.0-r2 (12 Aug 2014)

  12 Aug 2014; Sergey Popov <pinkbyte@gentoo.org> +boost-1.55.0-r2.ebuild:
  Revision bump: add multilib support, wrt bug #512884

  09 Aug 2014; Markus Meier <maekke@gentoo.org> boost-1.52.0-r7.ebuild:
  arm stable, bug #518488

  07 Aug 2014; Jeroen Roovers <jer@gentoo.org> boost-1.52.0-r7.ebuild:
  Stable for HPPA (bug #518488).

  07 Aug 2014; Sergey Popov <pinkbyte@gentoo.org> boost-1.52.0-r7.ebuild:
  Make dev-util/boost-build dependency less strict

  07 Aug 2014; Sergey Popov <pinkbyte@gentoo.org> boost-1.52.0-r7.ebuild:
  Backport fix for bug #498134, wrt bug #518840. Thanks to Michael Jones
  <gentoo AT jonesmz.com> for discovering this issue

  30 Jul 2014; Mikle Kolyada <zlogene@gentoo.org> boost-1.52.0-r7.ebuild:
  Whitespace

  30 Jul 2014; Julian Ospald <hasufell@gentoo.org> boost-1.52.0-r7.ebuild:
  backport glibc-2.18 patch to stable candidate wrt #518544

  29 Jul 2014; Mikle Kolyada <zlogene@gentoo.org> boost-1.52.0-r7.ebuild:
  amd64 stable wrt bug #518488
