@@ -27,17 +27,17 @@ EBUILD boost-1.53.0-r1.ebuild 10568 SHA256 1e9eb4d9417c45a81983e6512f5532eb19fdc
 EBUILD boost-1.54.0-r1.ebuild 10588 SHA256 7636425a238deb362cc7b1e94ee08077918551884ac93aeca9fb6d239e00607a SHA512 525b1f63dc71421f83ea19a847f4ed69117c91c32d055aafb0e8a62d33e52a2f27fe6e8470e803b47713cfe57c6007d1bfb03f103b97e880c7eb8df141c7008c WHIRLPOOL 72bdb9aea7c58e40314130372c34fb0eb823e2b28dfac0e2829097b43a4b1d9f63dfc281f571ff38242bca8e024dda182f654094cfc4032c1bda7fef6a1cb08d
 EBUILD boost-1.55.0-r1.ebuild 10444 SHA256 59636bf0376206cf81ae153bd7ba3c8607864db47a23644b23888bc141aa2d71 SHA512 5dffb6071529a997f1520e3ad140e11d1d74f301fd5f91a0a76035b878bbc977b16e27a98ace61a364f8208771110bf4a22ff66a848fb01d7c1506f0634c4502 WHIRLPOOL 6f6857f2ecd5fd601f7c7e3f95d585747af9cc439797af1e1f6507594837b3dce1d5f61b480eae803e94d382f1069956ad16ff56f13df65c674875f16e9ffc82
 EBUILD boost-1.55.0-r2.ebuild 11338 SHA256 ba30f00f6343c3e29252398ea078997d1c84c6580f315c9a705baac62c27cb6f SHA512 151a95b47ab8fa12abc77d5d6d88e286f90630ab37634f77e4636418022c0671c82c655ff912cf61a82fd8bd01936dde74f17bfd09ed500def722713147c2707 WHIRLPOOL bdd6adb38ff0815d0b091c3808b74bc99fe99f4dcbc479529c086a03da33147d6ea8fa8d60876aeda7be6f2ef158e5ed308d4f8d60bd9fa958c833a6d0d31db8
-EBUILD boost-1.56.0.ebuild 11335 SHA256 afc51121db599c832ab9ed268118d9eca4db3c1783595f4ea3640c77e09546a5 SHA512 39e360a151d877dd6abfa90aa3cb45ebc9d2de18b502dbce2743ec4608e8bdb0b93ca6033c67575bf07ac0daf64e1121fe2373f4e204fe37dfa0e245766e7964 WHIRLPOOL e0f8e61e83de5993a5742b61a0d2970ed89f5bc96b6c59b064013c26fe7c1fb8d3a5c425c13b76f7ca73fcd66644256b12457105057e6fdf6c00a501fd60491c
-MISC ChangeLog 56374 SHA256 bc67a6408c432a19a772225ab914f65108d83f80d806cb1b3ce038b8df1483a2 SHA512 a9f34dc18b6b4524feaab14129539abbe0a6a7305d92cd76f6ca5cb171a9f47c237a818b9bdc2da406ef013fd017671689c2c9cb4ed5db6f1293d3ebb98a0bd4 WHIRLPOOL 93e949d9ea7a2802155494e1ecb7589d27adcff715faa99d0ec2783c5c4dbcbd9eadb9a752a78b1cc65ced2eda1ee686513c1c988a522ef6cf2732d7a375a2b4
+EBUILD boost-1.56.0.ebuild 11520 SHA256 be2f285bf940bdf4885e756174047fb29d614c64bd0bc0ec4327764f0c02e951 SHA512 a46be608e39d95e2e8d099fd05146cbf709c450024fbfb73242e652ddcf7f2049c24a12aadeffa81a03888df82afaeff3133dad17bbadccfc892b9f7279ec94d WHIRLPOOL 41fa8d07a19b8858c9424d67bc5930f40648b5af7934c0a31beb699536cc7458c4fd1c9315efd59193098efe88d3118f21c03dbd82e0745ab15269c81261bf59
+MISC ChangeLog 56508 SHA256 6b80064a6169369906ab999fbcc92776f57c5921a02a88c6baf03f6622aeaef3 SHA512 410d435fbfa06af578260014600b80b049a790d5cb9a06c6718b76e6194b2c5219b9988c7558958a0c15fdd7e06bbb20c216d7a9de5a98b77378331c71e44a29 WHIRLPOOL e0f7cbbcbeab784e263b0b9e19264944fdb97990c7b4b6228fb9b87e5ab3fbbf7779fc370e806a84d86f086b486ed5963a9e4f1946fc123ac7737366d0f7958f
 MISC metadata.xml 1363 SHA256 81717d0ffd5ebadbe4b12d4a38b332f3128da205a46e3cfd201e91f6ad474d68 SHA512 162040a40e83cceacea3605d45bc846cbd721446949c66bd836ab54e113ada77f1f462c7e61d7e544bc073920475db6b81c104390d6c83aba7228d65ff270419 WHIRLPOOL be141d041846a3a79efb7579c3f842960afe27a6e29659bad88ae8e999aef30074d2ab23c9eb295152d88f75d80efc86fed1c08c11b4f3f0d5e866b6d3c4802c
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQEcBAEBCAAGBQJUCC00AAoJECo/aRed9267VAQH/1tvSsAosMoaaTaH4wzsMpI7
-m6LBzdaM2CpqnQm9eZTepg5bIwNLOjdB1mfr6ITsLvLVPu7QlZ1bTPvHt1xjwpyD
-XfgVeMoXTP20xXN8pbqx6lJZc9RGmYfH+X/3xwJahddgcGTDSOu4VcUCtDvnUDwt
-9OuzWjtln+xZloQpNIXAmLFE6nrZFjqxpk1B/0kdYOZEmiVfjNQPzw/Ct9rpekT0
-cYFS3uOs6uyFY8ClfOu9UX2NWz5SjR7XlEkHxXHHXz55oGfoc8zCKRTUIGtBp1fU
-o12g19EbeFj9SD2hp/VB1cLt8fhJE5kLFgiV/zqIh2izEhhqQ3vFOhe1BTA0o3E=
-=S3JX
+iQEcBAEBCAAGBQJUJR1WAAoJECo/aRed9267AAoH/1u/mNWjCXA9J0pOBRmMunh6
+fNZJkN9spNzcLdGfKPHEtyjYddh10VUTleTjk+Kr0H8WddN3j7Op1X1t53lAvWFO
+DBxejOLhwg287J3KEFrijTOLCacGH0qCtlzYEtshOB7SDBwyQPbhV9LUC5IUpHxp
+/xMeR4RUS7cuEw/u/u1VDw0phXGgLI4kLJlDG00jGkpHs7YuO8t+tEaepaK3FSJc
+oIS0y5AgjdA5rhk1SH26xrQRJecyLcyBWm6u6dag4i4gIsGpe0ijePDhv2L4xt1L
+VyKi/qzr9DPTBBnV+10V5n/l/j3v6H82kNy1yg/hCaVZuI8w9yPgbRopCrFS9TM=
+=UyzU
 -----END PGP SIGNATURE-----
