@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/boost
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/boost/ChangeLog,v 1.332 2014/09/04 09:13:24 pinkbyte Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/boost/ChangeLog,v 1.333 2014/09/26 08:01:25 pinkbyte Exp $
+
+  26 Sep 2014; Sergey Popov <pinkbyte@gentoo.org> boost-1.56.0.ebuild:
+  Add workaround for building with USE=tools, wrt bug #522682
 
 *boost-1.56.0 (04 Sep 2014)
 
